# promptwriter-plugin

./: .env.example  .gitignore  README.md  build_notebook.py  docker-compose.yml  pyproject.toml  tutorial.ipynb
data/: generate_sample.py
src/prompt_guidance/: __init__.py  cli.py  config.py  context_engineer.py  drift_detector.py  embeddings.py  feedback.py  ingestors.py  llm.py  pipeline.py  rewriter.py  vectorstore.py
tests/: test_context_engineer.py  test_drift_detector.py
